<resources>
    <string name="app_name">BUDDY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_text">What da fuck</string>
    <string name="my_button">MyButton</string>
    <string name="welcome_text">МЫ РАДЫ\n ПРИВЕТСТВОВАТЬ\n ТЕБЯ В\n ПРИЛОЖЕНИИ BUDDY!</string>
    <string name="city_choice_text">ПРОСТО\n ВЫБЕРИ <b>СВОЙ</b>\n <b>ГОРОД</b> И МЫ\n НАЙДЕМ <b>ТЕБЕ</b>\n <b>ПИТОМЦА</b></string>
    <string name="next">ДАЛЕЕ</string>
    <string name="button_description">It\'s a button man</string>
    <string name="city_text">Город:</string>
    <string name="cat_photo_description">It\'s a photo of nice cat</string>
    <string name="animal_choice_text_in_current_city">КОГО ИЩЕМ в</string>
    <string name="it_s_a_check_button_for_your_choice">It\'s a check button for your choice</string>
    <string name="logo_discription">Logo</string>
    <string name="more">Ещё</string>
    <string name="bird_for_more">v</string>
    <string name="menu_button_description">It\'s menu button</string>
    <string name="animal_filter_button">It\'s a filter button</string>
    <string name="kennel_name">Приют \"%1$s\"</string>
    <string name="animal_gender">Пол: %1$s</string>
    <string name="animal_age">Возраст: %1$s</string>
    <string name="animal_breed">Порода: %1$s</string>
    <string name="animal_color">Цвет: %1$s</string>
    <string name="animal_fur_length">Длина шерсти: %1$s</string>
    <string name="animal_s_image">animal\'s image</string>
    <string name="button_for_call">Button for call: %1$s</string>
    <string name="button_for_email">Button for email: %1$s</string>
    <string name="big_card_animal_photo_counter">%1$d/%2$d</string>
    <string name="registration_button">Регистрация</string>
    <string name="login_button">Логин</string>
    <string name="login_main_text">Вход</string>
    <string name="e_mail">E-mail:</string>
    <string name="make_password">Придумайте пароль:</string>
    <string name="password">Password:</string>
    <string name="registration_kennel_name">Название приюта:</string>
    <string name="registration_main_text">Регистрация</string>
    <string name="registration_kennel_name_text">Название приюта:</string>
    <string name="registration_address_text">Адрес:</string>
    <string name="phone_number_text">Контактный телефон:</string>
    <string name="kennel_name_hint">Название приюта</string>
    <string name="city_name_hint">Город</string>
    <string name="street_name_hint">Улица</string>
    <string name="house_number_hint">Дом</string>
    <string name="phone_number_hint">+7-928-128-28-28</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="avatar">Avatar</string>
    <string name="name_surname_text">Ф.И.О.</string>
    <string name="kennel_identify_num">ИНН предприятия:</string>
    <string name="snackbar_registration_text">Поздравляем, вы успешно зарегистрировались</string>
    <string name="profile_btn_name">Профиль</string>
    <string name="animal_list_btn_name">Лента</string>
    <string name="favorite_btn_name">Избранное</string>
    <string name="kennels_btn_name">Приюты</string>
    <string name="settings_btn_description">Кнопка для входа в настройки профиля пользователя</string>
    <string name="profile_name_title">Имя:</string>
    <string name="profile_status_title">Статус:</string>
    <string name="profile_volonteer_btn_text">Стать волонтером</string>
    <string name="registration_or_entrance_str">Регистрация/Вход</string>
    <string name="registr_or_entrance_text">Вам необходимо\n выполнить вход или зарегистрироваться</string>
    <string name="entrance_btn_text">Вход</string>
    <string name="registration_btn_text">Регистрация</string>
    <string name="project_logo_dog_sun_and_grass">Логотип приложения - собака, солнце и трава</string>
    <string name="project_logo_text">Текстовый логотип проекта Бадди</string>
    <string name="input_hint_for_city_choice">Введите Ваш город</string>
    <string name="profile_name_hint">Имя</string>
    <string name="user_settings_label">Настройки</string>
    <string name="add_photo_to_profile_description">Кнопка для добавления фотографии в профиль</string>
    <string name="name_label_text">Имя:</string>
    <string name="user_settings_surname_label">Фамилия:</string>
    <string name="gender_label">Пол:</string>
    <string name="user_settings_men_btn">Мужской</string>
    <string name="user_settings_women_btn">Женский</string>
    <string name="user_settings_city_label">Город:</string>
    <string name="user_settings_phone_label">Телефон:</string>
    <string name="user_settings_change_pwd_label">Сменить пароль:</string>
    <string name="user_settings_old_pwd_label">Старый пароль</string>
    <string name="user_settings_old_pwd_hint">Старый пароль</string>
    <string name="user_settings_new_pwd_hint">Новый пароль</string>
    <string name="user_settings_repeat_new_pwd_hint">Повторите новый пароль</string>
    <string name="settings_save_btn">Сохранить</string>
    <string name="city_choice_description_text">Введите ваш город и мы покажем животных рядом с вами</string>
    <string name="city_choice_description_text_else_from_settings">Введите Ваш новый город</string>
    <string name="user_settings_icon_description">Иконка на карточке настроек пользователя</string>
    <string name="alert_dialog_notification_text">Уведомление</string>
    <string name="user_settings_dialog_clarification_text">Вы точно хотите \n изменить настройки?</string>
    <string name="animal_delete_dialog_clarification_text">Вы точно хотите \n удалить питомца?</string>
    <string name="user_settings_dialog_clarification_text_end">Поздравляем Ваш пароль успешно\n изменен</string>
    <string name="animal_delete_error_dialog_clarification_text">Во время удаления что-то пошло не так\n попробуйте немного позже</string>
    <string name="yes_btn">Дa</string>
    <string name="no_btn">Нет</string>
    <string name="user_settings_dialog_ok_btn">Ok</string>
    <string name="add_kennel_fragment_kennels_btn_text">Приюты</string>
    <string name="add_kennel_fragment_volunteer_btn_text">Волонтеры</string>
    <string name="add_kennel_fragment_add_btn_text">Добавить приют</string>
    <string name="add_kennel_fragment_empty_kennels_text">К сожалению у Вас пока \n нет приютов</string>
    <string name="add_kennel_fragment_empty_volunteers_text">Хотите поучаствовать\n в волонтерской программе? \n Пишите на адрес - \n mr.shtein61@yandex.ru</string>
    <string name="kennel_settings_label">Регистрация приюта:</string>
    <string name="add_photo_to_kennel_description">Кнопка для установки фотографии для профиля приюта</string>
    <string name="organization_name_label_text">Название организации:</string>
    <string name="kennel_settings_phone_number_label">Телефон организации:</string>
    <string name="kennel_settings_address_label">Адрес:</string>
    <string name="city_label">Город:</string>
    <string name="kennel_settings_identification_number_label">ИНН:</string>
    <string name="kennel_settings_name_hint">Папа Кот</string>
    <string name="kennel_settings_phone_number_hint">+7(928)555-55-55</string>
    <string name="kennel_settings_email_hint">papakot@yandex.ru</string>
    <string name="kennel_settings_city_hint">Ростов-на-Дону, Ростовская область</string>
    <string name="kennel_settings_street_hint">Улица</string>
    <string name="kennel_settings_house_hint">Дом</string>
    <string name="kennel_settings_building_hint">Корп.</string>
    <string name="kennel_settings_identification_number_hint">0123456789</string>
    <string name="kennel_confirm_reg_text">Подтверждение регистрации</string>
    <string name="kennel_confirm_name_label">Название приюта:</string>
    <string name="kennel_confirm_phone_label">Телефон:</string>
    <string name="kennel_confirm_email_label">e-mail:</string>
    <string name="kennel_confirm_address_label">Адрес:</string>
    <string name="kennel_confirm_identification_number_label">ИНН</string>
    <string name="kennel_confirm_save_btn">Подтвердить</string>
    <string name="kennel_confirm_congratulation">Поздравляем</string>
    <string name="kennel_confirm_description_text">Приют успешно добавлен\n в ближайшие 2 дня мы свяжемся с вами\nи можно будет публиковать питомцев</string>
    <string name="kennel_confirm_failed_text">Данный приют уже зарегистрирован\n за дополнительной информацией можно\n можно обратиться по адресу mr.shtein61@yandex.ru</string>
    <string name="kennel_avatar_description">Аватарка приюта</string>
    <string name="kennel_settings_btn_description">Кнопка выбора настроек приюта</string>
    <string name="kennel_home_volunteers_icon_description">Иконка с изображением волонтеров</string>
    <string name="kennel_home_animals_icon_description">Иконка с изображением лапы животного</string>
    <string name="kennel_home_add_new_dog_btn_description">Кнопка для добавления новой собаки</string>
    <string name="animal_in_kennel_avatar_description">Фото животного для входа в профиль животного</string>
    <string name="not_valid_kennel_dialog_verification_text">К сожалению Ваш приют еще \n не прошел верификацию</string>
    <string name="ok_btn_text">Ok</string>
    <string name="add_animal_label_text">Добавление животного</string>
    <string name="add_animal_first_img_description">Первая картинка с животным</string>
    <string name="add_animal_second_img_description">Вторая картинка с животным</string>
    <string name="add_animal_third_img_description">Третья картинка с животным</string>
    <string name="add_animal_fourth_img_description">Четвертая картинка с животным</string>
    <string name="add_animal_add_btn_description">Кнопка для добавления новой фотографии</string>
    <string name="add_animal_cancel_image_btn_description">Кнопка для удаления фотографии животного</string>
    <string name="age_text">Возраст:</string>
    <string name="from_text">от</string>
    <string name="until_text">до</string>
    <string name="year">Год</string>
    <string name="month">Месяц</string>
    <string name="nickname_text">Кличка:</string>
    <string name="animal_breed_label">Порода:</string>
    <string name="animal_color_label">Цвет:</string>
    <string name="animal_gender_label_text">Пол:</string>
    <string name="male_letter">М</string>
    <string name="female_letter">Ж</string>
    <string name="add_animal_description_label_text">Описание:</string>
    <string name="add_animal_add_btn_text">Сохранить питомца</string>
    <string name="add_animal_years_text">Лет</string>
    <string name="add_animal_moths_text">Мес</string>
    <string name="zero">0</string>
    <string name="abbr_month">Мес</string>
    <string name="add_animal_kind_label_text">Вид животного</string>
    <string name="bad_token_msg">К сожалению Ваш токен устарел,\n необходимо заново залогиниться</string>
    <string name="server_unavailable_msg">Сервер приложения сейчас не доступен, попробуйте чуть позже</string>
    <string name="server_error_msg">На сервере произошла ошибка, попробуйте зайти чуть позже</string>
    <string name="add_animal_dialog_clarification_text">%1$s питомца</string>
    <string name="bad_token_dialog_text">Срок действия логина закончился,\n необходимо заново войти в приложение</string>
    <string name="animal_settings_change_btn_description">Кнопка для перехода к изменению питомца</string>
    <string name="animal_settings_delete_btn_description">Кнопка для удаления питомца</string>
    <string name="animal_photo_description">Фото питомца</string>
    <string name="delete_btn_text">Удалить</string>
    <string name="change_btn_text">Изменить</string>
    <string name="animals_list_search_btn_description">Кнопка для поиска питомца</string>
    <string name="dogs">Собаки</string>
    <string name="cats">Кошки</string>
    <string name="destination_btn_description">Кнопка для определения местоположения питомца</string>
</resources>