<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/kennel_graph"
        android:icon="@drawable/kennels_btn"
        android:title="@string/kennels_btn_name"
        />

    <item
        android:id="@+id/animals_feed_graph"
        android:icon="@drawable/animal_list_btn"
        android:title="@string/animal_list_btn_name"
        />

    <item
        android:id="@+id/profile_graph"
        android:icon="@drawable/profile_btn"
        android:title="@string/profile_btn_name"
        />

<!--    <item-->
<!--        android:id="@+id/favorite_fragment_btn"-->
<!--        android:icon="@drawable/favorite_btn"-->
<!--        android:title="@string/favorite_btn_name"-->
<!--        />-->

</menu>