<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registration_start_constraint_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registration_end_constraint_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/registration_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_main_text"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/registration_kennel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_kennel_name_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registration_main_text"
        app:layout_constraintStart_toStartOf="@id/registration_start_constraint_line"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        
        android:id="@+id/kennel_name_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/animal_search_panel"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/registration_kennel_name"
        app:layout_constraintEnd_toEndOf="@id/registration_end_constraint_line"
        app:layout_constraintStart_toStartOf="@id/registration_start_constraint_line"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/kennel_name_hint"/>

    <TextView
        android:id="@+id/registration_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_address_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/kennel_name_input"
        app:layout_constraintStart_toStartOf="@id/registration_kennel_name"
        android:layout_marginTop="20dp"
       />

    <EditText
        android:id="@+id/registration_city_name_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/animal_search_panel"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/registration_address_text"
        app:layout_constraintEnd_toEndOf="@id/registration_end_constraint_line"
        app:layout_constraintStart_toStartOf="@id/registration_start_constraint_line"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/city_name_hint"/>

    <EditText
        android:id="@+id/registration_street_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintWidth_percent="0.55"
        android:background="@drawable/animal_search_panel"
        app:layout_constraintTop_toBottomOf="@id/registration_city_name_input"
        app:layout_constraintStart_toStartOf="@id/registration_start_constraint_line"
        android:layout_marginTop="15dp"
        android:hint="@string/street_name_hint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/registration_house_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintWidth_percent="0.2"
        android:background="@drawable/animal_search_panel"
        app:layout_constraintTop_toBottomOf="@id/registration_city_name_input"
        app:layout_constraintEnd_toEndOf="@id/registration_end_constraint_line"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/house_number_hint"/>

    <TextView
        android:id="@+id/registration_phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registration_house_name"
        app:layout_constraintStart_toStartOf="@id/registration_address_text"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/registration_phone_number_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/animal_search_panel"
        app:layout_constraintTop_toBottomOf="@id/registration_phone_number_text"
        app:layout_constraintEnd_toEndOf="@id/registration_end_constraint_line"
        app:layout_constraintStart_toStartOf="@id/registration_start_constraint_line"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/phone_number_hint"/>

    <Button
        android:id="@+id/registration_kennel_name_fragment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FF8A80"
        app:layout_constraintTop_toBottomOf="@id/registration_phone_number_input"/>

</androidx.constraintlayout.widget.ConstraintLayout>