<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/kennel_settings_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="60dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/kennel_settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/kennel_settings_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/kennel_settings_avatar_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:src="@drawable/photo_hint"
            android:contentDescription="@string/add_photo_to_kennel_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_label"
            app:shapeAppearance="@style/ShapeAppearance.Buddy.CircleImageView"
            />

        <TextView
            android:id="@+id/kennel_settings_organization_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/organization_name_label_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_avatar_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_organization_name_input_container"
            style="@style/textInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_organization_name_label"
            android:hint="@string/kennel_settings_name_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_organization_name_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kennel_settings_phone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/kennel_settings_phone_number_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_label"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_organization_name_input_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_phone_number_input_container"
            style="@style/textInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_phone_number_label"
            android:hint="@string/kennel_settings_phone_number_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_phone_number_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kennel_settings_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/e_mail"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_phone_number_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_phone_number_input_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_email_input_container"
            style="@style/textInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_email_label"
            android:hint="@string/kennel_settings_email_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_email_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kennel_settings_city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/kennel_settings_city_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_email_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_email_input_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_city_input_container"
            style="@style/textInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_city_label"
            android:hint="@string/kennel_settings_city_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_city_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kennel_settings_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/kennel_settings_address_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_city_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_city_input_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_street_input_container"
            style="@style/textInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_address_label"
            android:hint="@string/kennel_settings_street_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_street_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_house_input_container"
            style="@style/textInputContainer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_street_input_container"
            android:hint="@string/kennel_settings_house_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_house_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_building_input_container"
            style="@style/textInputContainer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/kennel_settings_house_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_street_input_container"
            android:hint="@string/kennel_settings_building_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_building_input"
                style="@style/changeEditTextPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/kennel_settings_identification_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/kennel_settings_identification_number_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_street_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_building_input_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kennel_settings_identification_number_input_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textInputContainer"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_organization_name_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_identification_number_label"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            android:hint="@string/kennel_settings_identification_number_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kennel_settings_identification_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/changeEditTextPadding"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kennel_settings_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/cian4"
            android:elevation="4dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/settings_save_btn"
            android:textColor="@color/white"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@id/kennel_settings_identification_number_input_container"
            app:layout_constraintStart_toStartOf="@id/kennel_settings_identification_number_input_container"
            app:layout_constraintTop_toBottomOf="@id/kennel_settings_identification_number_input_container"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>